@@ -1,4 +1,5 @@
 3.3
+ * maxPurgeableTimestamp needs to check memtables too (CASSANDRA-9949)
  * Avoid bootstrap hanging when existing nodes have no data to stream (CASSANDRA-11010)
 Merged from 3.0:
  * Update CQL documentation (CASSANDRA-10899)
